--- a/website_example/index.html
+++ b/website_example/index.html
@@ -100,8 +100,28 @@
 <script src="js/common.js"></script>
 <script src="js/custom.js"></script>
 <script>
-// Store last pool statistics
-var lastStats;
+		// Store last pool statistics
+		let lastStats;
+		let mergedStats = {};
+		let blockExplorers = {};
+		let mergedApis = {};
+
+		function getUrlVars () {
+			let vars = {};
+			let location = window.location.href.replace('#worker_stats', '');
+			let parts = location.replace(/[?&]+([^=&]+)=([^&]*)/gi, function (m, key, value) {
+				vars[key] = value;
+			});
+			return vars;
+		}
+
+		function getUrlParam (parameter, defaultvalue) {
+			let urlparameter = defaultvalue;
+			if (window.location.href.indexOf(parameter) > -1) {
+				urlparameter = getUrlVars()[parameter];
+			}
+			return urlparameter;
+		}
 
 // Get current miner address
 function getCurrentAddress() {
@@ -137,6 +157,7 @@ function updateIndex(){
     updateText('coinSymbol', lastStats.config.symbol);
     updateText('g_networkHashrate', getReadableHashRateString(lastStats.network.difficulty / lastStats.config.coinDifficultyTarget) + '/sec');
     updateText('g_poolHashrate', getReadableHashRateString(lastStats.pool.hashrate) + '/sec');    
+    updateText('g_poolHashrateSolo', getReadableHashRateString(lastStats.pool.hashrateSolo) + '/sec');
     if (lastStats.miner && lastStats.miner.hashrate){
          updateText('g_userHashrate', getReadableHashRateString(lastStats.miner.hashrate) + '/sec');
     }
@@ -179,6 +200,35 @@ function fetchLiveStats() {
         fetchLiveStats();
     });
 }
+	
+	        // Fetch Block and Transaction Explorer Urls
+		let xhrBlockExplorers;
+		let xhrMergedApis;
+
+		function fetchBlockExplorers () {
+			let apiURL = api + '/block_explorers';
+
+			xhrBlockExplorers = $.ajax({
+					url: apiURL,
+					dataType: 'json',
+					cache: 'false'
+				})
+				.done(function (data) {
+					blockExplorers = data;
+				})
+
+			apiURL = api + '/get_apis';
+
+			xhrMergedApis = $.ajax({
+					url: apiURL,
+					dataType: 'json',
+					cache: 'false',
+				})
+				.done(function (data) {
+					mergedApis = data;
+					loadLiveStats()
+				})
+		}
 
 // Initialize
 $(function(){
